--- a/package.json
+++ b/package.json
@@ -16,7 +16,11 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "lint": "eslint ./src",
+    "lint:fix": "eslint --fix ./src ",
+    "prettier": "prettier \"**/*.{json,yaml,md}\" --check",
+    "prettier:fix": "prettier \"**/*.{json,yaml,md}\" --write"
   },
   "eslintConfig": {
     "extends": [
@@ -35,5 +39,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "eslint-config-olaf": "0.0.1"
   }
 }
