::white_check_mark: router test 코드 추가

--- a/.eslintrc
+++ b/.eslintrc
@@ -1,5 +1,8 @@
 {
     "extends": "eslint-config-olaf",
+    "env": {
+        "jest": true
+    },
     "rules": {
         "react/react-in-jsx-scope": 0,
         "prettier/prettier": [
