--- a/.eslintrc
+++ b/.eslintrc
@@ -5,6 +5,7 @@
     },
     "rules": {
         "react/react-in-jsx-scope": 0,
+        "react/prop-types": 0,
         "prettier/prettier": [
             "error",
             {
